Minor theme fixes

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -182,8 +182,8 @@
 
   <Selects>
     <Select id="brand-colors">
-      <Option>default</Option>
-      <Option>primary</Option>  
+      <Option>primary</Option>
+      <Option>secondary</Option>
       <Option>info</Option>
       <Option>success</Option>
       <Option>warning</Option>
