Minor theme fixes

--- a/src/Presentation/SmartStore.Web/Themes/FlexBlack/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/FlexBlack/theme.config
@@ -9,8 +9,8 @@
     <Var name="footer-bg" type="Color">#464646</Var>
 	  <Var name="btn-primary-bg" type="Color">#666666</Var>
 	  <Var name="btn-primary-border" type="Color">#444444</Var>
-    <Var name="google-font-1" type="String">Abel:300,400,700</Var>
-    <Var name="font-family-sans-serif" type="String">Abel</Var>
+    <Var name="google-font-1" type="String">Abel</Var>
+    <Var name="font-family-sans-serif" type="String">Abel, "Helvetica Neue", Arial, sans-serif</Var>
     <Var name="font-size-base" type="String">1rem</Var>
     <Var name="font-size-sm" type="String">0.925rem</Var>
     <Var name="font-size-xs" type="String">0.875rem</Var>
