Added font size variables to theme configuration

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -35,9 +35,9 @@
     
     <!-- Layout -->
     <Var name="boxed" type="Boolean">false</Var>
-    <Var name="site-bg" type="Color">$gray-lightest</Var>
     
     <!-- Main site colors -->
+    <Var name="site-bg" type="Color">$gray-lightest</Var>
     <Var name="body-bg" type="Color">#fff</Var>
     <Var name="body-color" type="Color">#333</Var>
     <Var name="text-muted" type="Color">#999</Var>
@@ -97,6 +97,14 @@
     <Var name="headings-line-height" type="String">1.2</Var>
     <Var name="headings-color" type="String">inherit</Var>
     <Var name="lead-font-weight" type="String">300</Var>
+
+    <!-- h1-h6 -->
+    <Var name="font-size-h1" type="String">2.5rem</Var>
+    <Var name="font-size-h2" type="String">2rem</Var>
+    <Var name="font-size-h3" type="String">1.75rem</Var>
+    <Var name="font-size-h4" type="String">1.25rem</Var>
+    <Var name="font-size-h5" type="String">1rem</Var>
+    <Var name="font-size-h6" type="String">$font-size-base</Var>
 
     <!-- Header -->
     <Var name="header-bg" type="Color">transparent</Var>
