Theme configuration: flat searchbox button style

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -135,7 +135,9 @@
     <Var name="searchbox-focus-bg" type="Color">#fff</Var>
     <Var name="searchbox-border-color" type="Color">rgba(0,0,0, 0.12)</Var>
     <Var name="searchbox-border-active-color" type="Color">rgba(0,0,0, 0.2)</Var>
-    <Var name="searchbox-hit-tag-color" type="Color">darken($brand-warning, 10%)</Var>
+    <Var name="search-button-style" type="Select#brand-colors">primary</Var>
+    <Var name="search-button-flat" type="Boolean">false</Var>
+    <Var name="searchbox-hit-tag-color" type="Color">darken($brand-warning, 10%)</Var>    
 
     <!-- States -->
     <Var name="state-success-text" type="Color">#3c763d</Var>
@@ -176,7 +178,6 @@
     
     <!-- Misc  -->
     <Var name="shopbar-label" type="Select#brand-colors">warning</Var>
-    <Var name="search-button-style" type="Select#brand-colors">primary</Var>
     <Var name="nav-tabs-active-link-color" type="Color">$gray</Var>
     <Var name="product-price-color" type="Color">$body-color</Var>
     <Var name="product-detail-addtocart-box-bg" type="Color">$gray-lightest</Var>
