Theming: minor css fixes

--- a/src/Presentation/SmartStore.Web/Themes/FlexBlack/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/FlexBlack/theme.config
@@ -29,5 +29,6 @@
     <Var name="dropdown-link-hover-color" type="Color">rgba(0,0,0,0.87)</Var>
     <Var name="dropdown-link-hover-bg" type="Color">#eeeeee</Var>
     <Var name="offcanvas-cart-footer" type="Color">#424242</Var>
+    <Var name="search-button-flat" type="Boolean">true</Var>
   </Vars>
 </Theme>
