--- a/src/Presentation/SmartStore.Web/Themes/FlexBlue/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/FlexBlue/theme.config
@@ -21,6 +21,7 @@
     <Var name="inverse-navbar" type="Boolean">true</Var>
     <Var name="megamenu-bg" type="Color">transparent</Var>
     <Var name="searchbox-border-active-color" type="Color">rgba(0,0,0,0.75)</Var>
+    <!--<Var name="search-button-flat" type="Boolean">true</Var>-->
     <Var name="shopbar-label" type="Select#brand-colors">primary</Var>
     <Var name="costep-progress-color" type="Color">$orange</Var>
     <Var name="offcanvas-cart-footer" type="Color">lighten($blue, 7%)</Var>
