Installation sample data: Added variants to the flak sunglasses and some other edits

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -735,6 +735,7 @@
     <Content Include="Content\samples\category_games.jpg" />
     <Content Include="Content\samples\category_gaming.png" />
     <Content Include="Content\samples\category_gaming_accessories.png" />
+    <Content Include="Content\samples\category_gift-cards.png" />
     <Content Include="Content\samples\category_giftcards.png" />
     <Content Include="Content\samples\category_golf.jpg" />
     <Content Include="Content\samples\category_notebooks.png" />
@@ -831,12 +832,61 @@
     <Content Include="Content\samples\product_corbusier_lc6_table_3.jpg" />
     <Content Include="Content\samples\product_corbusier_lc6_table_4.jpg" />
     <Content Include="Content\samples\product_CustomFlakSunglasses.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_gray.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_clear.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_jadeiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_positiverediridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_rubyiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_sapphireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_violetiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_24kiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_matteblack_fireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_24kiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_clear.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_fireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_gray.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_jadeiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_positiverediridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_rubyiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_sapphireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_orangeflare_violetiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_24kiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_clear.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_fireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_gray.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_jadeiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_rubyiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_sapphireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_violetiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_polishedwhite_positiverediridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_24kiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_clear.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_fireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_gray.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_jadeiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_positiverediridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_rubyiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_sapphireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_redline_violetiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_24kiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_clear.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_fireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_gray.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_jadeiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_positiverediridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_rubyiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_sapphireiridium.jpg" />
+    <Content Include="Content\samples\product_CustomFlak_skyblue_violetiridium.jpg" />
     <Content Include="Content\samples\product_dellinspiron23.png" />
     <Content Include="Content\samples\product_dualshock4.jpg" />
     <Content Include="Content\samples\product_evolution-high-school-game-basketball.jpg" />
     <Content Include="Content\samples\product_fifa17.jpg" />
     <Content Include="Content\samples\product_gbb-epic-sub-zero-driver.jpg" />
     <Content Include="Content\samples\product_giftcart.png" />
+    <Content Include="Content\samples\product_gift_card_10.png" />
+    <Content Include="Content\samples\product_gift_card_100.png" />
+    <Content Include="Content\samples\product_gift_card_25.png" />
+    <Content Include="Content\samples\product_gift_card_50.png" />
     <Content Include="Content\samples\product_hoffmann_cube_chair_black.jpg" />
     <Content Include="Content\samples\product_horizon.jpg" />
     <Content Include="Content\samples\product_ipad_1.jpg" />
