AmazonPay: Replaced branding image

--- a/src/Plugins/SmartStore.AmazonPay/SmartStore.AmazonPay.csproj
+++ b/src/Plugins/SmartStore.AmazonPay/SmartStore.AmazonPay.csproj
@@ -163,6 +163,9 @@
     <Compile Include="Widgets\AmazonPayWidget.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\branding.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\images\favicon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -207,16 +210,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\images\logo.gif">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Description.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\icon.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\branding.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Localization\resources.de-de.xml">
