Added config setting 'sm:PdfEngineBaseUrl'. There are cases where the PDF converter exits with a network error, when it is unable to load automatically resolved URLs.

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -66,7 +66,10 @@
     <add key="g:MapsUrl" value="http://maps.google.com/maps?hl={0}&amp;q={1}" />
     <!-- uncomment and set this to your store's task scheduler base url when the automatic url resolution fails (e.g. 'http://www.mystore.com/taskscheduler') -->
     <!--
-    <add key="sm:TaskSchedulerBaseUrl" value="" />
+    <add key="sm:TaskSchedulerBaseUrl" value="http://localhost/taschscheduler" />
+    -->
+    <!--
+    <add key="sm:PdfEngineBaseUrl" value="http://localhost" />
     -->
   </appSettings>
   <system.web>
