--- a/SmartStoreNET.Tasks.Targets
+++ b/SmartStoreNET.Tasks.Targets
@@ -102,6 +102,8 @@
 		  <V8-Native-Binaries-x64 Include="$(SrcFolder)\packages\JavaScriptEngineSwitcher.V8.Native.win-x64.2.4.0\runtimes\win7-x64\native\**\*"/>
 		  <LibSass-Native-Binaries-x86 Include="$(SrcFolder)\packages\LibSassHost.Native.win-x86.1.0.3\runtimes\win7-x86\native\**\*"/>
 		  <LibSass-Native-Binaries-x64 Include="$(SrcFolder)\packages\LibSassHost.Native.win-x64.1.0.3\runtimes\win7-x64\native\**\*"/>
+      <VC14-Native-Binaries-x86 Include="$(LibFolder)\msvcp140\x86\**\*"/>
+      <VC14-Native-Binaries-x64 Include="$(LibFolder)\msvcp140\x64\**\*"/>
       <RoslynFiles Include="$(SrcFolder)\packages\Microsoft.Net.Compilers.1.3.2\tools\**\*"/>
 		</ItemGroup>
 
@@ -157,6 +159,8 @@
 		<Copy SourceFiles="@(V8-Native-Binaries-x64)" DestinationFolder="$(StageFolder)\bin\x64\%(RecursiveDir)" />
 		<Copy SourceFiles="@(LibSass-Native-Binaries-x86)" DestinationFolder="$(StageFolder)\bin\x86\%(RecursiveDir)" />
 		<Copy SourceFiles="@(LibSass-Native-Binaries-x64)" DestinationFolder="$(StageFolder)\bin\x64\%(RecursiveDir)" />
+    <Copy SourceFiles="@(VC14-Native-Binaries-x86)" DestinationFolder="$(StageFolder)\bin\x86\%(RecursiveDir)" />
+    <Copy SourceFiles="@(VC14-Native-Binaries-x64)" DestinationFolder="$(StageFolder)\bin\x64\%(RecursiveDir)" />
     
     <!-- copy Roslyn compiler files -->
     <Copy SourceFiles="@(RoslynFiles)" DestinationFolder="$(StageFolder)\bin\roslyn\%(RecursiveDir)" />
