(Perf) turned on view location caching during debug (can be turned off in web.config with 'sm:EnableViewLocationCacheDuringDebug')

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -35,6 +35,7 @@
     <!-- set this to "true", if the view engine should also try to resolve view files ending with {CurrentLanguage} (e.g.: MyView.de.cshtml > MyView.cshtml)  -->
     <add key="sm:EnableLocalizedViews" value="false" />
     <add key="sm:EnableVbViews" value="false" />
+    <add key="sm:EnableViewLocationCacheDuringDebug" value="true" />
     <add key="sm:ShowCustomErrors" value="true" />
     <add key="sm:EnableLegacyRoutesMapping" value="true" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
@@ -76,8 +77,9 @@
     <sessionState configSource="Config\SessionState.config" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
     <httpRuntime targetFramework="4.5.2" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
-    <compilation debug="true" targetFramework="4.5.2" numRecompilesBeforeAppRestart="251" batch="true" optimizeCompilations="true"> 
-      <assemblies> 
+    <compilation debug="true" targetFramework="4.5.2" numRecompilesBeforeAppRestart="250" batch="true" optimizeCompilations="true"> 
+      <assemblies>
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.IO.Compression.FileSystem, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
         <remove assembly="System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
